<resources>
  <string name="app_name" translatable="false">Oblivion</string>
  <string name="stateText">Not Connected</string>
  <string name="basedOnWarp">Based on Warp</string>
  <string name="aboutApp">About the App</string>
  <string name="aboutAppDesc">"This application is designed to access the internet freely, and any commercial use of it is prohibited.\n\n\n Internet for all, or no one! "</string>
  <string name="appVersion">App Version: 8</string>
  <string name="logApp">App Log</string>
  <string name="means" formatted="true">Means \"unawareness, ignorance\"</string>
  <string name="dontForget">Don\'t Forget!</string>
  <string name="segaro">#Segaro</string>
  <string name="yousef">#Yousef_Ghobadi</string>
  <string name="slogan">Internet for All, or No One</string>
  <string name="blackList">Blacklist</string>
  <string name="disabledR">Disabled</string>
  <string name="disabledRText">In disabled mode, traffic of all apps passes through VPN.</string>
  <string name="enabledR">Enabled</string>
  <string name="enabledRText">In enabled mode, traffic of selected apps does not pass through VPN.</string>
  <string name="whitelistR">Whitelist</string>
  <string name="whitelistRText">In whitelist mode, only selected apps will use VPN.</string>
  <string name="select_all">Select all</string>
  <string name="clear_all">Clear all</string>
  <string name="showSystemAppsText">Show System Apps</string>
  <string name="settingsText">Settings</string>
  <string name="endpointText">Endpoint</string>
  <string name="endpointTextDesc">Combination of IP or domain name, along with port</string>
  <string name="portTunText">Tunnel Port</string>
  <string name="portTunTextDesc">Specify the tunnel port for the app</string>
  <string name="blackListTextDesc">Specify which apps should not use VPN</string>
  <string name="connectFromLanText">Connect from LAN</string>
  <string name="connectFromLanTextDesc">Ability to connect other network devices</string>
  <string name="psiphonText">Psiphon</string>
  <string name="psiphonTextDesc">Activate Psiphon</string>
  <string name="chooseText">Choose Country</string>
  <string name="chooseTextDesc">Country to connect to the internet from</string>
  <string name="licenseText">License</string>
  <string name="licenseTextDesc">If you have a license (each license is doubled)</string>
  <string name="goolText">Gool</string>
  <string name="goolTextDesc">Activate Warp In Warp</string>
  <string name="editSheetEndpoint">Change Endpoint Value</string>
  <string name="cancel">Cancel</string>
  <string name="update">Update</string>
  <string name="notConnected">Not Connected</string>
  <string name="connecting">Connecting…</string>
  <string name="connected">Connected</string>
  <string name="batteryOpL">Disable Battery optimization</string>
  <string name="batteryOpLText">Disabling battery optimization for better experience</string>
  <string name="dialBtText"> To ensure the app works properly, please disable battery optimization for this app. </string>
  <string name="goToSettings"> Go to Settings </string>
  <string name="copytoclip">Copy log to clipboard</string>
  <string name="endpointTypeText">Endpoint Type</string>
  <string name="endpointTypeTextDesc">Used to find the endpoint IP</string>
  <string name="turn_on_dark_mode">Turn on dark mode</string>
  <string name="turn_on_dark_mode_desc">turn on dark mode</string>
  <string name="copied_to_clipboard">Copied to clipboard</string>
  <string name="title">Title</string>
  <string name="content">Endpoint</string>
  <string name="save">Save</string>
  <string name="saved_endpoints">Saved Endpoints</string>
  <string name="select_language">Select Language</string>
  <string name="resetAppTextDesc">Reset app to defaults</string>
  <string name="resetAppText">Reset</string>
  <string name="proxy_mode">Proxy Mode</string>
  <string name="running_in_proxy_mode_not_vpn">Running in proxy mode (not VPN). System DNS may leak; IPv6 is disabled to reduce leaks.</string>
  <string name="dnsText">DNS</string>
  <string name="dnsTextDesc">Set DNS servers for the tunnel</string>
  <string name="keepAwakeText">Keep Alive</string>
  <string name="keepAwakeTextDesc">Prevent device from sleeping while connected (uses more battery)</string>
  <string name="mtuText">MTU</string>
  <string name="mtuTextDesc">Tunnel MTU (1200–1500)</string>
  <string name="lanBypassText">LAN Bypass</string>
  <string name="lanBypassTextDesc">Exclude local network subnets from VPN</string>
  <string name="reset_to_default_endpoint">Reset to Default Endpoint</string>
    <string-array name="countries">
    <item>Australia</item>
    <item>Austria</item>
    <item>Belgium</item>
    <item>Bulgaria</item>
    <item>Canada</item>
    <item>Croatia</item>
    <item>Czechia</item>
    <item>Denmark</item>
    <item>Estonia</item>
    <item>Finland</item>
    <item>France</item>
    <item>Germany</item>
    <item>Hungary</item>
    <item>India</item>
    <item>Ireland</item>
    <item>Italy</item>
    <item>Japan</item>
    <item>Latvia</item>
    <item>Netherlands</item>
    <item>Norway</item>
    <item>Poland</item>
    <item>Portugal</item>
    <item>Romania</item>
    <item>Serbia</item>
    <item>Singapore</item>
    <item>Slovakia</item>
    <item>Spain</item>
    <item>Sweden</item>
    <item>Switzerland</item>
    <item>United Kingdom</item>
    <item>United States</item>
  </string-array>
  <string-array name="englishCountries">
    <item>Australia</item>
    <item>Austria</item>
    <item>Belgium</item>
    <item>Bulgaria</item>
    <item>Canada</item>
    <item>Croatia</item>
    <item>Czechia</item>
    <item>Denmark</item>
    <item>Estonia</item>
    <item>Finland</item>
    <item>France</item>
    <item>Germany</item>
    <item>Hungary</item>
    <item>India</item>
    <item>Ireland</item>
    <item>Italy</item>
    <item>Japan</item>
    <item>Latvia</item>
    <item>Netherlands</item>
    <item>Norway</item>
    <item>Poland</item>
    <item>Portugal</item>
    <item>Romania</item>
    <item>Serbia</item>
    <item>Singapore</item>
    <item>Slovakia</item>
    <item>Spain</item>
    <item>Sweden</item>
    <item>Switzerland</item>
    <item>United Kingdom</item>
    <item>United States</item>
  </string-array>
  <string-array name="endpointType">
    <item>Auto</item>
    <item>IPv4</item>
    <item>IPv6</item>
  </string-array>
  <string-array name="allowed_languages">
    <item>en</item> <!-- English -->
    <item>fa</item> <!-- Persian -->
    <item>ru</item> <!-- Russian -->
    <item>tr</item> <!-- Turkish -->
    <item>zh</item> <!-- Chinese -->
  </string-array>
  <string name="splashText">With the efforts of #Yousef_Ghobadi and dozens of well-known or anonymous activists, for the purpose of providing free access to the internet for people…</string>
  <string name="ipv6BindText">Enable IPv6 bind</string>
  <string name="ipv6BindDesc">Use :: for SOCKS bind where supported</string>
  <string name="bind_host_label">Bind Host</string>
  <string name="bind_host_desc">Host to bind SOCKS proxy (e.g. 127.0.0.1, 0.0.0.0, ::)</string>
  <string name="copy_proxy_address">Copy Proxy Address</string>
  <string name="copy_proxy_address_desc">Copy host:port to clipboard</string>
  <string name="widget_connect">Connect</string>
  <string name="widget_disconnect">Disconnect</string>
</resources>
