<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/shabnam"
        android:text="@string/batteryOpL"
        android:textColor="?attr/colorOnBackground"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/shabnam"
        android:text="@string/dialBtText"
        android:textColor="?attr/colorSecondary"
        android:textSize="16sp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_button_negative"
            android:padding="13dp"
            android:minWidth="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gray"
            app:backgroundTint="@null"
            style="?android:attr/borderlessButtonStyle"
            android:fontFamily="@font/shabnam"
            android:text="@string/cancel"
            android:textColor="#000" />

        <Button
            android:id="@+id/dialog_button_positive"
            android:minWidth="150dp"
            android:background="@drawable/btn_primary"
            app:backgroundTint="@null"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/shabnam"
            android:padding="13dp"
            android:text="@string/goToSettings"
            android:textColor="?attr/colorOnPrimary" />
    </LinearLayout>

</LinearLayout>
