<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:fitsSystemWindows="true">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
          android:id="@+id/disabled"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="start"
          android:background="?android:selectableItemBackground"
          android:button="@null"
          android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
          android:fontFamily="@font/shabnam"
          android:layoutDirection="rtl"
          android:paddingStart="20dp"
          android:paddingTop="10dp"
          android:paddingEnd="20dp"
          android:textColor="@color/text_color"
          android:paddingBottom="10dp"
          android:text="@string/disabledR"
          android:textAlignment="textStart"
          android:textSize="14sp"
          android:focusable="true"
          android:nextFocusDown="@id/blacklist" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/shabnam"
            android:layoutDirection="rtl"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/disabledRText"
            android:textColor="@color/subtitle_color"
            android:textAlignment="textStart"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/blacklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?android:selectableItemBackground"
            android:button="@null"
            android:textColor="@color/text_color"
            android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
            android:fontFamily="@font/shabnam"
            android:layoutDirection="rtl"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/enabledR"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:focusable="true"
            android:nextFocusUp="@id/disabled"
            android:nextFocusDown="@id/whitelist" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/shabnam"
            android:layoutDirection="rtl"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/subtitle_color"
            android:paddingBottom="10dp"
            android:text="@string/enabledRText"
            android:textAlignment="textStart"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/whitelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?android:selectableItemBackground"
            android:button="@null"
            android:textColor="@color/text_color"
            android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
            android:fontFamily="@font/shabnam"
            android:layoutDirection="rtl"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/whitelistR"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:focusable="true"
            android:nextFocusUp="@id/blacklist"
            android:nextFocusDown="@id/showSystemApps" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/shabnam"
            android:layoutDirection="rtl"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/subtitle_color"
            android:paddingBottom="10dp"
            android:text="@string/whitelistRText"
            android:textAlignment="textStart"
            android:textSize="14sp" />
    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/showSystemApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:textColor="@color/text_color"
        android:fontFamily="@font/shabnam"
        android:padding="4dp"
        android:text="@string/showSystemAppsText"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:switchPadding="4dp"
        android:nextFocusUp="@id/blacklist" />
</androidx.constraintlayout.widget.ConstraintLayout>
