<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@drawable/rounded_bottom_sheet">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical">

    <View
        android:id="@+id/dividingCloser"
        android:layout_width="64sp"
        android:layout_height="5sp"
        android:layout_marginTop="8sp"
        android:background="@drawable/bottom_sheet_closer" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/shabnam"
        android:text="@string/editSheetEndpoint"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="12sp"
        android:inputType="text"
        android:background="@drawable/edittext_back"
        android:fontFamily="@font/shabnam"
        android:lineSpacingExtra="4sp"
        android:padding="12sp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSurface"
        android:textSize="15sp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginVertical="12sp"
        android:orientation="horizontal">

      <Button
          android:id="@+id/cancelButton"
          android:background="@drawable/btn_gray"
          app:backgroundTint="@null"
          style="?android:attr/borderlessButtonStyle"
          android:layout_width="0sp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8sp"
          android:layout_weight="1"
          android:fontFamily="@font/shabnam"
          android:text="@string/cancel"
          android:textColor="#000"
          android:textSize="17sp" />

      <Button
          android:id="@+id/applyButton"
          android:background="@drawable/btn_primary"
          app:backgroundTint="@null"
          style="?android:attr/borderlessButtonStyle"
          android:layout_width="0sp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8sp"
          android:layout_weight="1"
          android:fontFamily="@font/shabnam"
          android:text="@string/update"
          android:textColor="?attr/colorOnPrimary"
          android:textSize="17sp" />

    </LinearLayout>
  </LinearLayout>
</ScrollView>
